# log-simulators

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/log_simulators/: __init__.py  cli.py
src/log_simulators/app/: cli.py
src/log_simulators/asa/: cli.py
src/log_simulators/cef/: cli.py
src/log_simulators/cloud/: cli.py
src/log_simulators/core/: __init__.py  entities.py  formats.py  runner.py  scenario.py  sinks.py
src/log_simulators/ics/: cli.py
src/log_simulators/iot/: cli.py
src/log_simulators/k8s/: cli.py
src/log_simulators/postgres/: cli.py
src/log_simulators/retail/: cli.py
src/log_simulators/syslog/: cli.py
src/log_simulators/vmware/: cli.py
src/log_simulators/web/: cli.py
src/log_simulators/windows/: cli.py
standalone/: iot_sensor_sim.py  syslog_sim.py  web_access_sim.py
tests/: conftest.py  test_app.py  test_asa.py  test_cef.py  test_cloud.py  test_core.py  test_ics.py  test_iot.py  test_k8s.py  test_postgres.py  test_retail.py  test_syslog.py  test_vmware.py  test_web.py  test_windows.py
